--- a/devices/rockchip_armv8/.config
+++ b/devices/rockchip_armv8/.config
@@ -26,4 +26,4 @@ CONFIG_PACKAGE_kmod-pcie_mhi=m
 
 CONFIG_PACKAGE_luci-ssl=n # uhttpd服务
 CONFIG_PACKAGE_luci-ssl-nginx=y # nginx
-
+CONFIG_PACKAGE_luci-app-lucky=y
